# Junta

./: .gitignore  .styluaignore  README.md  kaledis.toml  mkdocs.yml  pyproject.toml  rokit.toml  selene.toml  typesolver.yml
.github/workflows/: CI.yml
app/: __main__.py  app.py
docs/: index.md
src/: main.luau
src/Core/State/: BaseState.luau  init.luau
src/Game/States/PlayState/: init.lua
